# g1_ros_package

./: .gitignore  README.md  build.sh
controller/g1_controller/: README.md
controller/g1_controller/launch/: cmd_vel_to_g1.launch.py
driver/livox_ros_driver2/: build.sh
driver/livox_ros_driver2/config/: MID360_config.json
driver/livox_to_pointcloud2/src/: livox_to_pointcloud2.cpp
mapping/FAST_LIO/: PCD_SAVE_FIX.md  README.md
mapping/FAST_LIO/config/: mid360.yaml
mapping/FAST_LIO/scripts/: pcd_viewer.py
mapping/FAST_LIO/src/: laserMapping.cpp
mapping/FAST_LIO_LOCALIZATION/: CMakeLists.txt  LOCALIZATION_USAGE.md  README.md  ROS2_MIGRATION.md  package.xml
mapping/FAST_LIO_LOCALIZATION/config/: avia.yaml  map_server_params.yaml  mid360.yaml
mapping/FAST_LIO_LOCALIZATION/include/: common_lib.h
mapping/FAST_LIO_LOCALIZATION/launch/: localization_avia.launch.py  localization_mid360.launch.py  localization_velodyne.launch.py
mapping/FAST_LIO_LOCALIZATION/maps/: mapping4.pgm  mapping4.yaml  scans.pgm  scans.yaml
mapping/FAST_LIO_LOCALIZATION/rviz_cfg/: loam_livox.rviz  localization.rviz
mapping/FAST_LIO_LOCALIZATION/scripts/: compare_poses.py  find_best_position.py  global_localization.py  global_localization_ros1_backup.py  publish_initial_pose.py  quick_localize.py  transform_fusion.py
mapping/FAST_LIO_LOCALIZATION/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
mapping/FAST_LIO_LOCALIZATION2/: CMakeLists.txt
mapping/FAST_LIO_LOCALIZATION2/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
mapping/FAST_LIO_LOCALIZATION2/fast_lio_localization/: global_localization.py  odom_compare.py  odom_topic.py  publish_initial_pose.py  transform_fusion.py
mapping/FAST_LIO_LOCALIZATION2/launch/: localization.launch.py
mapping/pcd2pgm/: README.md
mapping/pcd2pgm/PGM/: mapping.pgm  mapping.yaml
mapping/pcd2pgm/config/: pcd2pgm.yaml
mapping/pointcloud_to_laserscan/: CMakeLists.txt
mapping/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
mapping/pointcloud_to_laserscan/scripts/: pointcloud_convert.py
mapping/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
navigation/g1_navigation/: CMakeLists.txt  package.xml
navigation/g1_navigation/config/: params.yaml
navigation/g1_navigation/launch/: bringup.launch.py  g1_navigation.launch.py  localization.launch.py  navigation.launch.py  robot_description.launch.py
navigation/g1_navigation/maps/: map.yaml  mapping4.yaml  rrc.pgm  rrc.yaml
navigation/g1_navigation/rviz/: view.rviz
navigation/g1_navigation/scripts/: semantic_map_pc_client.py
